# TremorViT

./: .gitignore  README.md  pyproject.toml
config/: detector_configs.json  project_config.json
config/experiments/: vit_locator_v11.json
data/version1.0/station/: hinet_used.txt
scripts/: evaluate.py  finetune_locator.py  hypocenter_determination.py  make_waveform_dataset.py  predict_hypocenter_turbo.py
src/my_module/: __init__.py  logging_utils.py  station.py
src/my_module/config/: __init__.py  experiment_config.py  project_config.py
src/my_module/models/: __init__.py  cnn_detector.py  vit_locator.py
src/my_module/prediction/: __init__.py  ci.py  convert.py  k_core.py  utils.py
src/my_module/process/: __init__.py  spectrogram_generator.py  utils.py  waveform.py
src/my_module/sac/: __init__.py  sac_handler.py  sac_trace.py
src/my_module/train/: __init__.py  data_loader.py  dataset_builder.py  loop.py  loss.py  state.py  utils.py
